# floatty

./: .gitignore  .mcp.json  .replit  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile.warp  GEMINI.md  README.md  WARP.md  btca.config.jsonc  eslint.config.js  export-outline.mjs  float_av.py  launch-turtle-alpha.sh  launch-turtle-beta.sh  llm_ytpoop.py  package-lock.json  package.json  plan.md  pnpm-lock.yaml  replit.md  shelf.html  turbo.json  vite.config.ts
.claude/: ecc-tools.json  identity.json
.claude/agents/: architecture-reviewer.md
.claude/commands/: add-or-update-api-endpoint.md  bug.md  component-extraction-refactor.md  feature-development-door-component.md  feature-development.md  feature.md  floatty-foundation:finish.md  multi-layer-logging-refactor.md  refactoring.md  release-audit.md  release-version-bump.md  release-workflow.md  resolve-pr-comments.md  test-driven-development.md
.claude/handoffs/: blockservice-extraction-step2b.md  blockservice-extraction-step6.md  frontend-outline-switching.md
.claude/prompts/: nested-ymap-refactor.md
.claude/reviews/: 2025-12-28-keyboard-balanced-b8d2.md  2025-12-28-keyboard-quick-a7f3.md  index.md
.claude/rules/: accessibility-baseline.md  adding-block-types.md  api-reference.md  architecture.md  config-and-logging.md  contenteditable-patterns.md  do-not.md  door-development.md  logging-discipline.md  output-block-patterns.md  pane-drag-drop-patterns.md  pattern-fit-check.md  serde-api-patterns.md  solidjs-patterns.md  symmetry-check.md  test-fixtures-no-pii.md  ydoc-patterns.md
.codex/: AGENTS.md
apps/floatty/: AGENTS.md  CHANGELOG.md  PLAN.md  eslint.config.js  index.html  package.json  test-transform.test.ts  vitest.config.ts
apps/floatty/src-tauri/floatty-server/: Cargo.toml
apps/floatty/src-tauri/floatty-server/src/: backup.rs  config.rs  lib.rs  main.rs  outline_manager.rs  ws.rs
apps/floatty/src-tauri/floatty-server/src/api/: backup.rs  blocks.rs  discovery.rs  export.rs  mod.rs  outlines.rs  search.rs  sync.rs
apps/ink-chat/: .env.example  CLAUDE.md  package.json
apps/outline-explorer/: CLAUDE.md  package.json
compositions/: ground_loop.py  nocturnal_accumulator_v2.py  pressure.py  signal_test.py  waves_and_fields.py
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/code_styleguides/: javascript.md
docs/: API_IMPROVEMENTS.md  ARCHITECTURAL_AUDIT.md  ARCHITECTURE.md  ARCHITECTURE_LINEAGE.md  ARCHITECTURE_REVIEW_2026_01_08.md  ARCHITECTURE_SNAPSHOT_2026_01_09.md  BLOCK_TYPE_PATTERNS.md  CODE_PATTERN_ANALYSIS.md  DROP_SHELF_ARCHITECTURE.md  DROP_SHELF_IMPLEMENTATION_PROMPT.md  EXTERNAL_BLOCK_EXECUTION.md  FLO-200-MULTI-TURN-CONVERSATIONS.md  FLO-200-MULTI-TURN-LLM-SPEC.md  HEADLESS_ARCHITECTURE_ANALYSIS.md  KEYBOARD-NAVIGATION-SPEC.md  KEYBOARD.md  KEYBOARD_ARCHITECTURE.md  PATTERN_HARVEST_2026_01_09.md  RESUME-EPHEMERAL-PANES.md  SEARCH_ARCHITECTURE_LAYERS.md  SEARCH_ARCHITECTURE_SNAPSHOT.md  SEARCH_IMPLEMENTATION_STATUS.md  SEARCH_WORK_UNITS.md  TESTING_PATTERNS.md
docs/architecture/: BBS_OUTLINE_CONVERGENCE.md  BLOCK_CONTROLLER_TEST_PLAN.md  EXPAND_COLLAPSE_NAVIGATION.md  FLO-361-HOOK-STARVATION.md  FLOATTY_HANDLER_REGISTRY.md  FLOATTY_HOOK_SYSTEM.md  FLOATTY_MULTI_CLIENT.md  FORTY_YEAR_PATTERN.md  HANDLER_REGISTRY_IMPLEMENTATION.md  INTENT_PRIMITIVES.md  LOGGING_STRATEGY.md  PATTERN_INTEGRATION_SKETCH.md  PHILOSOPHY.md  PLUGIN_ARCHITECTURE_PROMPT.md  QUERY_COMPONENTS_CONTEXT_VISION.md  README.md  RICH_OUTPUT_HANDLER_GUIDE.md  RUST_MODULARIZATION_GUIDE.md  SEQUENCE_NUMBER_REVIEW.md  YJS_DECOUPLING_AUDIT.md
docs/archive/: CODE-REVIEW-REMEDIATION.md  PATTERNS.md  RECON_BLOCK_SYSTEM.md
docs/evaluations/: composing-committed-terrain-map.md
docs/explorations/: BACKLINKS_AND_TTL_EXPLORATION.md
docs/floatty-foundation/: STATE.md
docs/guides/: ADDING_HANDLERS.md  API_QUERIES.md  BACKUP.md  DOORS.md  ECHOCOPY.md  EVAL.md  EVENT_SYSTEM.md  FULL_WIDTH.md  FUNC.md  HOOK_PATTERNS.md  SEND.md
docs/handoffs/: exploration-grounding.md  exploration-prompt.md  query-components-context-vision.md  search-plugin-spec.md  unit-0.1.md  unit-0.3.md  unit-1.1.md  unit-1.3.md  unit-2.1.md  unit-2.2.3.md  unit-2.4.md  unit-3.1.md  unit-3.2.md  unit-3.5.md  writer-rs-robustness.md
docs/reviews/: multi-outline-phase1-review.md
scripts/: binary-import.ts  build-server.sh  compile-door-bundle.mjs  compile-door.mjs  install-floatty.sh  post-merge.sh  rebuild.sh  search-test.sh  staged-import.ts  verify-isolation.sh
src/: App.css  App.tsx  global.d.ts  index.css  setupTests.ts  shelf-main.tsx  shelf.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/bindings/: Block.ts  BlockMetadata.ts  BlockType.ts
src-tauri/capabilities/: default.json
src-tauri/floatty-core/: Cargo.toml
src-tauri/floatty-core/bindings/: BlockMetadata.ts  BlockType.ts  Marker.ts
src-tauri/floatty-core/src/: batcher.rs  block.rs  emitter.rs  events.rs  lib.rs  metadata.rs  origin.rs  outline.rs  persistence.rs  store.rs
src-tauri/floatty-core/src/hooks/: inheritance_index.rs  metadata_extraction.rs  mod.rs  page_name_index.rs  parsing.rs  system.rs  tantivy_index.rs
src-tauri/floatty-core/src/search/: index_manager.rs  mod.rs  schema.rs  service.rs  writer.rs
src-tauri/floatty-server/: Cargo.toml  build.rs
src-tauri/floatty-server/src/: api.rs  auth.rs  backup.rs  block_service.rs  config.rs  lib.rs  main.rs  outline_manager.rs  ws.rs
src-tauri/plugins/tauri-plugin-pty/: Cargo.toml
src-tauri/plugins/tauri-plugin-pty/src/: lib.rs
src-tauri/src/: config.rs  ctx_parser.rs  ctx_watcher.rs  daily_view.rs  db.rs  db_blocks_test.rs  lib.rs  orphan_detector.rs  panel.rs  paths.rs  server.rs  sync_test.rs
src-tauri/src/commands/: acp.rs  agent_log.rs  clipboard.rs  ctx.rs  doors.rs  execution.rs  mod.rs  voice.rs  workspace.rs
src-tauri/src/services/: acp.rs  agent_log.rs  clipboard.rs  ctx.rs  door_watcher.rs  execution.rs  hooks.rs  mod.rs  provider.rs  voice.rs  workspace.rs
src-tauri/src/shelf/: db.rs  mod.rs  panel.rs  storage.rs
(+537 files in other folders)
