[workspace]
members = [".", "floatty-core", "floatty-server"]
resolver = "2"

[package]
name = "float-pty"
version = "0.1.0"
description = "Float PTY - Terminal Emulator"
authors = ["evan"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "float_pty_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-pty = { path = "plugins/tauri-plugin-pty" }
tauri-plugin-os = "2"
floatty-core = { path = "floatty-core" }

# Context aggregator dependencies
rusqlite = { version = "0.32", features = ["bundled"] }
notify = "7"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dirs = "5"
hex = "0.4"
walkdir = "2"
toml = "0.8"
yrs = "0.25.0"
base64 = "0.22.1"
ollama-rs = "0.3.3"
url = "2.5.7"
shell-words = "1.1.1"
tauri-plugin-clipboard = "2.1.11"

# macOS-only dependencies
[target.'cfg(target_os = "macos")'.dependencies]
# NSPanel floating window support
# TODO: Replace with crates.io version when published (currently git-only, spike code)
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
