[workspace]
members = [".", "floatty-core", "floatty-server"]
resolver = "2"

[workspace.package]
version = "0.9.2"

[package]
name = "float-pty"
version = "0.9.2"
description = "Float PTY - Terminal Emulator"
authors = ["evan"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "float-pty"

[lib]
name = "float_pty_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
vergen-gix = { version = "1", features = ["build", "cargo", "rustc"] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"  # Keep for compatibility during migration
tauri = { version = "2.10", features = [] }
tauri-plugin-pty = { path = "plugins/tauri-plugin-pty" }
tauri-plugin-os = "2"
floatty-core = { path = "floatty-core" }

# Structured logging with tracing (replaces tauri-plugin-log)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"

# Context aggregator dependencies
rusqlite = { version = "0.32", features = ["bundled"] }
notify = "7"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"  # Non-poisoning Mutex for ctx:: aggregator
dirs = "5"
hex = "0.4"
walkdir = "2"
toml = "0.8"
yrs = "0.25.0"
base64 = "0.22.1"
ollama-rs = "0.3.3"
schemars = "1.1"  # JSON schema for ollama-rs structured output (must match ollama-rs)
chrono = "0.4"    # Date handling for daily:: blocks
url = "2.5.7"
shell-words = "1.1.1"
tauri-plugin-clipboard = "2.1.11"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-mcp-bridge = "0.8"
arboard = "3"  # Direct clipboard access for batched IPC

# TypeScript bindings generation (for ts-gen binary)
ts-rs = "10"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-deep-link = "2"

[dev-dependencies]
tempfile = "3"
serial_test = "3"

# macOS-only dependencies
[target.'cfg(target_os = "macos")'.dependencies]
# NSPanel floating window support
# TODO: Replace with crates.io version when published (currently git-only, spike code)
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }

# Binary for generating TypeScript types from Rust
[[bin]]
name = "ts-gen"
path = "src/bin/ts-gen.rs"
