[package]
name = "floatty-core"
version = "0.1.0"
edition = "2021"
description = "Core block storage and persistence for Floatty"
license = "MIT"

[dependencies]
# CRDT - match version used in src-tauri
yrs = "0.25.0"

# Persistence
rusqlite = { version = "0.32" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# TypeScript bindings generation
ts-rs = "10"

# Error handling
thiserror = "2.0"

# Logging
log = "0.4"
tracing = "0.1"

# Utilities
dirs = "5"
chrono = { version = "0.4.31", default-features = false, features = ["std", "clock"] }
regex = "1"

# Full-text search
tantivy = "0.25"

# Fuzzy matching (page name autocomplete)
nucleo-matcher = "0.3.1"

# Async runtime (for broadcast channel, timer, spawn)
tokio = { version = "1", features = ["sync", "time", "rt"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["sync", "rt", "macros"] }
serial_test = "3"
