[package]
name = "floatty-server"
version.workspace = true
edition = "2021"
description = "Headless HTTP server for floatty block store"
license = "MIT"

[dependencies]
# Core block store
floatty-core = { path = "../floatty-core" }

# CRDT (for Y.Doc access)
yrs = "0.25.0"

# Web server
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
tokio-stream = "0.1"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2.0"

# Hashing (for sync health check)
sha2 = "0.10"

# Config
dirs = "5"
toml = "0.8"

# Time/date (only need "now" for Utc::now(), not "clock" which pulls timezone databases)
chrono = { version = "0.4", default-features = false, features = ["std", "now"] }

[[bin]]
name = "floatty-server"
path = "src/main.rs"

[lib]
name = "floatty_server"
path = "src/lib.rs"

[build-dependencies]
vergen-gix = { version = "1", features = ["build", "cargo", "rustc"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
